--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -13,49 +13,51 @@
 </head>
 
 <body>
-    <main>
-        <h1>Indice de Masa Corporal</h1>
+    <main>       
         <section>
+            <h1>Indice de Masa Corporal</h1>
             <table class="table">
                 <thead>
-                    <th scope="col">Diagnóstico</th>
-                    <th scope="col">Grado</th>
-                    <th scope="col">IMC</th>
+                    <tr>
+                        <th scope="col">Diagnóstico</th>
+                        <th scope="col">Grado</th>
+                        <th scope="col">IMC</th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr scope="row" >
+                    <tr>
                         <td rowspan="3">Delgadez</td>
                         <td>extrema</td>
                         <td class="imc">menor a 16</td>
                     </tr>
-                    <tr scope="row" >                        
+                    <tr>
                         <td>moderada</td>
                         <td class="imc">de 16 a 17</td>
                     </tr>
-                    <tr scope="row" >                      
+                    <tr>
                         <td>leve</td>
                         <td class="imc">de 17 a 18.5</td>
                     </tr>
-                    <tr scope="row" >
+                    <tr>
                         <td>Normal</td>
                         <td></td>
                         <td class="imc">de 18.5 a 25</td>
                     </tr>
-                    <tr scope="row" >
+                    <tr>
                         <td>Sobrepeso</td>
                         <td></td>
                         <td class="imc">de 25 a 30</td>
                     </tr>
-                    <tr scope="row" >
+                    <tr>
                         <td rowspan="3">Obesidad</td>
                         <td>leve</td>
                         <td class="imc">de 30 a 35</td>
                     </tr>
-                    <tr scope="row" >                      
+                    <tr>
                         <td>moderada</td>
                         <td class="imc">de 35 a 40</td>
                     </tr>
-                    <tr scope="row" >                      
+                    <tr>
                         <td>morvida</td>
                         <td class="imc">mayor a 40</td>
                     </tr>
@@ -65,10 +67,10 @@
         </section>
     </main>
     <footer>
-        <p>&#169 by Lorena Di Stefano - 2022</p>
+        <p>&#169; by Lorena Di Stefano - 2022</p>
     </footer>
 
-    <script src="script.js"> </script>
+    <script src="index.js"> </script>
 </body>
 
 </html>
