--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="3">Delgadez</td>
+                        <th scope="row" rowspan="3">Delgadez</td>
                         <td>extrema</td>
                         <td class="imc">menor a 16</td>
                     </tr>
@@ -39,17 +39,17 @@
                         <td class="imc">de 17 a 18.5</td>
                     </tr>
                     <tr>
-                        <td>Normal</td>
+                        <th scope="row">Normal</td>
                         <td></td>
                         <td class="imc">de 18.5 a 25</td>
                     </tr>
                     <tr>
-                        <td>Sobrepeso</td>
+                        <th scope="row">Sobrepeso</td>
                         <td></td>
                         <td class="imc">de 25 a 30</td>
                     </tr>
                     <tr>
-                        <td rowspan="3">Obesidad</td>
+                        <th scope="row" rowspan="3">Obesidad</td>
                         <td>leve</td>
                         <td class="imc">de 30 a 35</td>
                     </tr>
@@ -58,19 +58,17 @@
                         <td class="imc">de 35 a 40</td>
                     </tr>
                     <tr>
-                        <td>morvida</td>
+                        <td>morbida</td>
                         <td class="imc">mayor a 40</td>
                     </tr>
                 </tbody>
             </table>
-
         </section>
     </main>
     <footer>
         <p>&#169; by Lorena Di Stefano - 2022</p>
     </footer>
-
-    <script src="index.js"> </script>
+    <script src="./index.js"> </script>
 </body>
 
 </html>
