cambio de estilo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <main>
-        <section>
+        <div class="marco">
             <h1>Indice de Masa Corporal</h1>
             <table class="table">
                 <thead>
@@ -58,17 +58,17 @@
                         <td class="imc">de 35 a 40</td>
                     </tr>
                     <tr>
-                        <td>morbida</td>
+                        <td>mórbida</td>
                         <td class="imc">mayor a 40</td>
                     </tr>
                 </tbody>
             </table>
-        </section>
+        </div>
     </main>
     <footer>
         <p>&#169; by Lorena Di Stefano - 2022</p>
     </footer>
-    <script src="./index.js"> </script>
+     <script src="./index.js"> </script>
 </body>
 
 </html>
