--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <footer>
         <p>&#169; by Lorena Di Stefano - 2022</p>
     </footer>
-     <script src="./index.js"> </script>
+     <script src="index.js"> </script>
 </body>
 
 </html>
