--- a/index.html
+++ b/index.html
@@ -5,70 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Cálculo IMC</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
+    <title>Calculador IMC</title>
 </head>
 
 <body>
+
     <main>
-        <div class="marco">
-            <h1>Indice de Masa Corporal</h1>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Diagnóstico</th>
-                        <th scope="col">Grado</th>
-                        <th scope="col">IMC</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row" rowspan="3">Delgadez</td>
-                        <td>extrema</td>
-                        <td class="imc">menor a 16</td>
-                    </tr>
-                    <tr>
-                        <td>moderada</td>
-                        <td class="imc">de 16 a 17</td>
-                    </tr>
-                    <tr>
-                        <td>leve</td>
-                        <td class="imc">de 17 a 18.5</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Normal</td>
-                        <td></td>
-                        <td class="imc">de 18.5 a 25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Sobrepeso</td>
-                        <td></td>
-                        <td class="imc">de 25 a 30</td>
-                    </tr>
-                    <tr>
-                        <th scope="row" rowspan="3">Obesidad</td>
-                        <td>leve</td>
-                        <td class="imc">de 30 a 35</td>
-                    </tr>
-                    <tr>
-                        <td>moderada</td>
-                        <td class="imc">de 35 a 40</td>
-                    </tr>
-                    <tr>
-                        <td>mórbida</td>
-                        <td class="imc">mayor a 40</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="menu">
+            <h2>Ingresa el número de opción elegida</h2>
+
+        </div>
+        <hr>
+        <div class="calc"> </div>
+        <hr>
+        <div class="result"></div>
+        <hr>
+        <div class="lista_result"></div>
+        <hr>
+        <div class="info">
+            <h2>IMPORTANTE!</h2>
+            <p>La tabla o índice de Quetelet fue creada en 1832.</p>
+            <p>No contempla edad, género, porcentaje de grasa corporal o masa muscular</p>
+            <p>Considerando que el criterio sobre <span>"La Belleza"</span> varía según la época y las culturas;</p>
+            <p>te propongo que hablemos de <span>SALUD</span></p>
+            <p>No confundamos <span>"buena salud"</span> con una cuestión de <span>"estética"</span></p>
+            <p>Realizando chequeos periódicos, obtendrás información certera sobre lo que tu organismo necesita.</p>
         </div>
     </main>
-    <footer>
-        <p>&#169; by Lorena Di Stefano - 2022</p>
-    </footer>
-     <script src="index.js"> </script>
+
+    <script src="index.js"></script>
+
 </body>
 
 </html>
