--- a/index.html
+++ b/index.html
@@ -15,18 +15,34 @@
 </head>
 
 <body>
-
     <main>
-        <div class="menu">
-            <h2>Ingresa el número de opción elegida</h2>
-
+        <div id="menu">
+            <h2 id="menu_t">Calculador de IMC</h2>
+            <div class="menu_btn">
+                <input id="menu_input" type="number">
+                <input id="btn_menu" type="submit">
+            </div>
         </div>
         <hr>
-        <div class="calc"> </div>
+        <div class="calculo">
+            <form class="formulario" id="calculo">
+                <div>
+                    <label for="inputAltura" class="form_label">Ingresa tu altura expresada en metros</label>
+                    <input type="text" id="inputAltura" class="form_input" placeholder="Ejemplo: 1.64">
+                </div>
+                <div>
+                    <label for="inputPeso" class="form_label">Ingresa tu peso expresado en kilos</label>
+                    <input type="text" id="inputPeso" class="form_input" placeholder="Ejemplo: 75.2">
+                </div>
+                <div>
+                    <input type="submit" class="submit" id="calcular" value="Calcular">
+                    <input type="submit" class="submit" id="newCalc" value="Nuevo cálculo">
+                </div>
+            </form>
+        </div>
         <hr>
-        <div class="result"></div>
-        <hr>
-        <div class="lista_result"></div>
+        <div class="lista_result">
+        </div>
         <hr>
         <div class="info">
             <h2>IMPORTANTE!</h2>
