--- a/index.html
+++ b/index.html
@@ -2,61 +2,147 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-        crossorigin="anonymous"></script>
-    <title>Calculador IMC</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>Calculadora de IMC</title>
 </head>
 
-<body>
-    <main>
-        <div id="menu">
-            <h2 id="menu_t">Calculador de IMC</h2>
-            <div class="menu_btn">
-                <input id="menu_input" type="number">
-                <input id="btn_menu" type="submit">
+<body id="body">
+  <main>
+    <section class="menu_tabla">
+      <div class="menu">
+        <input id="menu" class="button" type="checkbox">
+        <label for="menu" class="label">Calcular IMC</label>
+        <div class="menu-content">
+          <div class="content">
+            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Calcular IMC
+            </button>
+            <button class="btn" id="btn_2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft"
+              aria-controls="offcanvasLeft">Lista de Resultados</button>
+            </button>
+            <button type="button" class="btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+              aria-controls="offcanvasRight">Lo que debes saber</button>
+            <button type="button" id="btn_4" class="btn">Finalizar</button>
+          </div>
+        </div>
+      </div>
+      <table class="table">
+        <thead id="Tabla">
+          <tr>
+            <th scope="col">Diagnóstico</th>
+            <th scope="col">Grado</th>
+            <th scope="col">IMC</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row" rowspan="3">Delgadez</td>
+            <td>extrema</td>
+            <td class="imc">menor a 16</td>
+          </tr>
+          <tr>
+            <td>moderada</td>
+            <td class="imc">de 16 a 17</td>
+          </tr>
+          <tr>
+            <td>leve</td>
+            <td class="imc">de 17 a 18.5</td>
+          </tr>
+          <tr>
+            <th scope="row">Normal</td>
+            <td></td>
+            <td class="imc">de 18.5 a 25</td>
+          </tr>
+          <tr>
+            <th scope="row">Sobrepeso</td>
+            <td></td>
+            <td class="imc">de 25 a 30</td>
+          </tr>
+          <tr>
+            <th scope="row" rowspan="3">Obesidad</td>
+            <td>leve</td>
+            <td class="imc">de 30 a 35</td>
+          </tr>
+          <tr>
+            <td>moderada</td>
+            <td class="imc">de 35 a 40</td>
+          </tr>
+          <tr>
+            <td>mórbida</td>
+            <td class="imc">mayor a 40</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section class="calculadora">
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 class="modal-title" id="calc-title">Calculadora</h3>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body">
+              <div id="inputAltura"></div>
+              <div id="inputPeso"></div>
+            </div>
+            <div class="modal-footer">
+              <div id="btnsCalculo">
+              </div>
+            </div>
+          </div>
         </div>
-        <hr>
-        <div class="calculo">
-            <form class="formulario" id="calculo">
-                <div>
-                    <label for="inputAltura" class="form_label">Ingresa tu altura expresada en metros</label>
-                    <input type="text" id="inputAltura" class="form_input" placeholder="Ejemplo: 1.64">
-                </div>
-                <div>
-                    <label for="inputPeso" class="form_label">Ingresa tu peso expresado en kilos</label>
-                    <input type="text" id="inputPeso" class="form_input" placeholder="Ejemplo: 75.2">
-                </div>
-                <div>
-                    <input type="submit" class="submit" id="calcular" value="Calcular">
-                    <input type="submit" class="submit" id="newCalc" value="Nuevo cálculo">
-                </div>
-            </form>
+      </div>
+    </section>
+    <section class="resultados">
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasLeft" aria-labelledby="offcanvasLeftLabel">
+        <div class="offcanvas-header">
+          <h5 id="offcanvasLeftLabel">Tus Resultados</h5>
+          <button type="button" id="btn_close_result" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
         </div>
-        <hr>
-        <div class="lista_result">
+        <div id="result-content" class="result">
         </div>
-        <hr>
-        <div class="info">
-            <h2>IMPORTANTE!</h2>
-            <p>La tabla o índice de Quetelet fue creada en 1832.</p>
-            <p>No contempla edad, género, porcentaje de grasa corporal o masa muscular</p>
-            <p>Considerando que el criterio sobre <span>"La Belleza"</span> varía según la época y las culturas;</p>
-            <p>te propongo que hablemos de <span>SALUD</span></p>
-            <p>No confundamos <span>"buena salud"</span> con una cuestión de <span>"estética"</span></p>
-            <p>Realizando chequeos periódicos, obtendrás información certera sobre lo que tu organismo necesita.</p>
-        </div>
-    </main>
 
-    <script src="index.js"></script>
+      </div>
+      </div>
+    </section>
+    <section class="informacion">
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+          <h5 id="offcanvasRightLabel">Tabla o Indice de Quetelet</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <p>Fue creada en <span>1832.</span></p>
+          <p>No contempla edad, género, porcentaje de grasa corporal o masa muscular</p>
+          <p>Considerando que el criterio sobre <span>"La Belleza"</span> varía según la época y las culturas,</p>
+          <p>te propongo que hablemos de <span>"SALUD"</span></p>
+          <p>No confundamos <span>"buena salud"</span> con una cuestión de <span>"estética"</span></p>
+          <p>Realizando chequeos periódicos, obtendrás información certera sobre lo que tu organismo necesita.</p>
+        </div>
+      </div>
+    </section>
 
+  </main>
+  <footer>
+    <p>&#169; by Lorena Di Stefano - 2022</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
