Optimizando el proyecto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -39,7 +41,7 @@
       <table class="table">
         <thead id="Tabla">
           <tr>
-            <th scope="col">Diagnóstico</th>
+            <th scope="col">Tipo</th>
             <th scope="col">Grado</th>
             <th scope="col">IMC</th>
           </tr>
@@ -113,7 +115,6 @@
         </div>
         <div id="result-content" class="result">
         </div>
-
       </div>
       </div>
     </section>
@@ -125,10 +126,10 @@
         </div>
         <div class="offcanvas-body">
           <p>Fue creada en <span>1832.</span></p>
-          <p>No contempla edad, género, porcentaje de grasa corporal o masa muscular</p>
-          <p>Considerando que el criterio sobre <span>"La Belleza"</span> varía según la época y las culturas,</p>
-          <p>te propongo que hablemos de <span>"SALUD"</span></p>
-          <p>No confundamos <span>"buena salud"</span> con una cuestión de <span>"estética"</span></p>
+          <p>No contempla edad, género, porcentaje de grasa corporal o masa muscular.</p>
+          <p>Considerando que el criterio sobre <span>"La Belleza"</span> varía según la época y las culturas,
+            te propongo que hablemos de <span>"SALUD".</span></p>
+          <p>No confundamos <span>"buena salud"</span> con una cuestión de <span>"estética".</span></p>
           <p>Realizando chequeos periódicos, obtendrás información certera sobre lo que tu organismo necesita.</p>
         </div>
       </div>
@@ -142,6 +143,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.35/dist/sweetalert2.all.min.js"></script>
   <script src="./index.js"></script>
 </body>
 
