--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
   <title>Calculadora de IMC</title>
 </head>
@@ -26,14 +27,12 @@
         <label for="menu" class="label">Calcular IMC</label>
         <div class="menu-content">
           <div class="content">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btnMenu" data-bs-toggle="modal" data-bs-target="#exampleModal">
               Calcular IMC
             </button>
-            <button class="btn" id="btn_2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft"
-              aria-controls="offcanvasLeft">Lista de Resultados</button>
-            </button>
-            <button type="button" id="btn_3" class="btn">Lo que debes saber</button>
-            <button type="button" id="btn_4" class="btn">Finalizar</button>
+            <button type="button" id="btn_2" class="btnMenu">Lista de Resultados</button>
+            <button type="button" id="btn_3" class="btnMenu">Lo que debes saber</button>
+            <button type="button" id="btn_4" class="btnMenu">Finalizar</button>
           </div>
         </div>
       </div>
@@ -94,28 +93,20 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="datos">
-             <div id="inputAltura"></div> 
-             <div id="inputPeso"></div> 
+              <div id="inputAltura"></div>
+              <div id="inputPeso"></div>
             </div>
             <div class="modal-footer" id="btnsCalculo">
-             
+
             </div>
           </div>
         </div>
       </div>
     </section>
     <section class="resultados">
-      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasLeft" aria-labelledby="offcanvasLeftLabel">
-        <div class="offcanvas-header">
-          <h5 id="offcanvasLeftLabel">Tus Resultados</h5>
-          <button type="button" id="btn_close_result" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-            aria-label="Close"></button>
-        </div>
-        <div id="result-content" class="result">
-        </div>
-      </div>
-      </div>
-    </section>   
+    </section>
+    <section class="info">
+    </section>
   </main>
   <footer>
     <p>&#169; by Lorena Di Stefano - 2022</p>
@@ -124,7 +115,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.35/dist/sweetalert2.all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="./dom.js"></script>
   <script src="./index.js"></script>
 </body>
