--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>Calculadora de IMC</title>
 </head>
 
-<body id="body">
+<body class="body">
   <main>
     <section class="menu_tabla">
       <div class="menu">
@@ -27,12 +27,12 @@
         <label for="menu" class="label">Calcular IMC</label>
         <div class="menu-content">
           <div class="content">
-            <button type="button" class="btnMenu" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Calcular IMC
-            </button>
+            <button type="button" id="btn_1" class="btnMenu" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">Calcular IMC</button>
             <button type="button" id="btn_2" class="btnMenu">Lista de Resultados</button>
             <button type="button" id="btn_3" class="btnMenu">Lo que debes saber</button>
-            <button type="button" id="btn_4" class="btnMenu">Finalizar</button>
+            <button type="button" id="btn_4" class="btnMenu">Los alimentos y sus propiedades</button>
+            <button type="button" id="btn_5" class="btnMenu">Finalizar</button>
           </div>
         </div>
       </div>
@@ -89,15 +89,13 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h3 class="modal-title" id="calc-title">Calculadora</h3>
+              <h3 class="modal_title" id="calc-title">Calculadora</h3>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="datos">
-              <div id="inputAltura"></div>
-              <div id="inputPeso"></div>
+
             </div>
             <div class="modal-footer" id="btnsCalculo">
-
             </div>
           </div>
         </div>
@@ -107,6 +105,7 @@
     </section>
     <section class="info">
     </section>
+    
   </main>
   <footer>
     <p>&#169; by Lorena Di Stefano - 2022</p>
