--- a/api_alimentos/api.html
+++ b/api_alimentos/api.html
@@ -17,12 +17,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <title>Los alimentos y sus propiedades</title>
 </head>
 
-<body>
+<body class="body_api">
+    <head class="head_api"></head>
+
     <section class="api">
     </section>
+
+    <footer class="footer_api">        
+    </footer>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
