nueva versión botones menú

--- a/api_alimentos/api.html
+++ b/api_alimentos/api.html
@@ -16,17 +16,20 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="api-style.css">
     <title>Los alimentos y sus propiedades</title>
 </head>
 
 <body class="body_api">
-    <head class="head_api"></head>
 
-    <section class="api">
-    </section>
+    <main>
+        <h1>"Los Alimentos y sus propiedades"</h1>
 
-    <footer class="footer_api">        
+        <section class="api">
+        </section>
+    </main>
+    <footer>
+        <p>&#169; by Lorena Di Stefano - 2022</p>
     </footer>
 
 
@@ -36,7 +39,7 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./api.js"></script>
+    <script src="./api-script.js"></script>
 </body>
 
 </html>
