--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -20,19 +18,13 @@
 </head>
 
 <body class="body">
-  <main>
+  <main id="main_table">
     <section class="menu_tabla">
       <div class="menu">
         <input id="menu" class="button" type="checkbox">
-        <label for="menu" class="label">Calcular IMC</label>
+        <label for="menu" class="label">Indice de Quetelet</label>
         <div class="menu-content">
           <div class="content">
-            <button type="button" id="btn_1" class="btnMenu" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Calcular IMC</button>
-            <button type="button" id="btn_2" class="btnMenu">Lista de Resultados</button>
-            <button type="button" id="btn_3" class="btnMenu">Lo que debes saber</button>
-            <button type="button" id="btn_4" class="btnMenu">Los alimentos y sus propiedades</button>
-            <button type="button" id="btn_5" class="btnMenu">Finalizar</button>
           </div>
         </div>
       </div>
@@ -105,9 +97,8 @@
     </section>
     <section class="info">
     </section>
-    
   </main>
-  <footer>
+  <footer class="footer">
     <p>&#169; by Lorena Di Stefano - 2022</p>
   </footer>
 
@@ -116,7 +107,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="./dom.js"></script>
-  <script src="./index.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
