--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Calculadora de IMC. Incluye información sobre la Tabla de Quetelet y los alimentos y sus propiedades nutricionales">
+  <meta name="keywords"
+    content="IMC, Indice de masa corporal, nutrición, alimentos, calculadora de IMC, tabla, tabla de Quetelet, indice de Quetelet, alimentos, propiedades de los alimentos, nutrición">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -85,7 +89,6 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="datos">
-
             </div>
             <div class="modal-footer" id="btnsCalculo">
             </div>
